--- a/_config.yml
+++ b/_config.yml
@@ -2,22 +2,20 @@
 #
 
 # Site settings
-title: Spectral
+title: Ryan Watson
 description: |
-  Another fine responsive  
-  site template freebie  
-  crafted by [HTML5 UP](http://html5up.net)
-owner: Your Name # or company name
-first_published: 2016 # if migrating another site, the year of your first publish
-email: your-email@domain.com
+
+owner: Ryan Watson # or company name
+first_published: 2017 # if migrating another site, the year of your first publish
+email: rwatso12@gmail.com
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 social:
-  twitter: https://twitter.com/<username>
-  github: https://github.com/<username>
-  linkedin-square: https://linkedin.com/in/<username>
-  facebook-official: https://facebook.com/<username>
-  google-plus-square: https://plus.google.com/u/0/+<username>
+  #twitter: https://twitter.com/<username>
+  github: https://github.com/watsonryan
+  linkedin-square: https://www.linkedin.com/in/ryanwatsonwvu/
+  #facebook-official: https://facebook.com/<username>
+  google-plus-square: https://scholar.google.com/citations?user=u989h-YAAAAJ&hl=en
   #email: /contact/
   #flickr:
   #instagram:
